...
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.numberslist.NumbersListActivity">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/numbersList"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                numberListItems="@{viewModel.numberList}"
                loadMoreListener="@{loadMoreListener}"
                numberListIsLoading="@{viewModel.isLoading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/bAddNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_add"
                android:onClick="showAddNumberDialog"
                android:layout_marginEnd="25dp"
...
