<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <EditText
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/etNumber"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <requestFocus/>
    </EditText>

</FrameLayout>